--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,24 @@
 version: 2.1
-orbs:
-  node: circleci/node@4.1.0
 jobs:
   build:
-    executor:
-      name: node/default
+    docker:
+      - image: cimg/node:20.2.0
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run:
-                name: Install Dependencies
-                command: npm install
-            # - run:
-            #     name: Check Code Style with Prettier
-            #     command: npx prettier --check "src/**/*.{ts,js,css,html}"
-            - run:
-                name: Run Tests
-                command: npm run test
-            - run:
-                name: Build
-                command: npm run build
+      - restore_cache:
+          keys:
+            - dependency-cache-{{ checksum "package-lock.json" }}
+            - dependency-cache-
+      - run:
+          name: Install dependencies
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - ./node_modules
+      - run:
+          name: Run tests
+          command: npm run test
 workflows:
   version: 2
   build:
