--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,11 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y google-chrome-stable --no-install-recommends
       - run:
+          name: Verify Chrome installation
+          command: |
+            echo $CHROME_BIN
+            $CHROME_BIN --version
+      - run:
           name: Run tests
           command: npm run test
 workflows:
