--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,41 +5,39 @@ jobs:
       - CI: true # Used by karma.conf.js to determine whether or not to use a headless browser.
     docker:
       - image: cimg/node:20.2.0
-    steps:
-      - checkout
-      - run: 
-          name: Clean modules
-          command: |
-            rm -rf ./node_modules/karma-chrome-launcher
-      - restore_cache:
-          keys:
-            - dependency-cache-{{ checksum "package-lock.json" }}
-            - dependency-cache-v2
-      - run:
-          name: Install dependencies
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-          name: Install Google Chrome
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y wget --no-install-recommends
-            wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get install -y google-chrome-stable --no-install-recommends
-      # - run:
-      #     name: Verify Chrome installation
-      #     command: |
-      #       echo $CHROME_BIN
-      #       $CHROME_BIN --version
-      - run:
-          name: Run tests
-          command: |
-            export CHROME_BIN=/usr/bin/google-chrome
-            npm run test
+steps:
+  - checkout
+  - run: 
+      name: Clean modules
+      command: |
+        rm -rf ./node_modules/karma-chrome-launcher
+  - restore_cache:
+      keys:
+        - dependency-cache-{{ checksum "package-lock.json" }}
+        - dependency-cache-v2
+  - run:
+      name: Install dependencies
+      command: npm install
+  - save_cache:
+      key: dependency-cache-{{ checksum "package-lock.json" }}
+      paths:
+        - ./node_modules
+  - run:
+      name: Install Google Chrome
+      command: |
+        curl -LO https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo dpkg -i google-chrome-stable_current_amd64.deb
+        sudo apt-get install -fy
+  - run:
+      name: Verify Chrome installation
+      command: |
+        echo $CHROME_BIN
+        $CHROME_BIN --version
+  - run:
+      name: Run tests
+      command: |
+        export CHROME_BIN=/usr/bin/google-chrome-stable
+        npm run test
 workflows:
   version: 2
   build:
