--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Verify Chrome installation
           command: |
+            export CHROME_BIN=/usr/bin/google-chrome-stable
             echo $CHROME_BIN
             $CHROME_BIN --version
       - run:
