--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ version: 2.1
 jobs:
   build:
     environment:
-      - CI: true # Used by karma.conf.js to determine whether or not to use a headless browser.
+      CI: true # Used by karma.conf.js to determine whether or not to use a headless browser.
+      CHROME_BIN: /usr/bin/google-chrome-stable
+
     docker:
       - image: cimg/node:20.2.0
     steps:
@@ -32,13 +34,11 @@ jobs:
       - run:
           name: Verify Chrome installation
           command: |
-            export CHROME_BIN=/usr/bin/google-chrome-stable
             echo $CHROME_BIN
             $CHROME_BIN --version
       - run:
           name: Run tests
           command: |
-            export CHROME_BIN=/usr/bin/google-chrome-stable
             npm run test
 workflows:
   version: 2
